--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,5 +1,5 @@
-exec-once = /nix/store/5frr8jbqss1a8gbb17kpf4982v8p900j-dbus-1.14.10/bin/dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
-exec-once = /nix/store/5frr8jbqss1a8gbb17kpf4982v8p900j-dbus-1.14.10/bin/dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
+# exec-once = /nix/store/5frr8jbqss1a8gbb17kpf4982v8p900j-dbus-1.14.10/bin/dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
+# exec-once = /nix/store/5frr8jbqss1a8gbb17kpf4982v8p900j-dbus-1.14.10/bin/dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
 # https://wiki.hyprland.org/Configuring/
@@ -51,7 +51,7 @@ exec-once = swaync
 # exec-once = crystal-dock
 exec-once = swayosd-server
 exec-once = uwsm finalize Hyprland
-exec-once = hyprpm reload -n
+# exec-once = hyprpm reload -n
 
 #############################
 ### ENVIRONMENT VARIABLES ###
