Icon theme installation

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -41,7 +41,7 @@ $lock = swaylock --clock --indicator --screenshots --effect-scale 0.4 --effect-v
 
 # exec-once = $terminal
 exec-once = hyprcursor
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = "systemctl --user start hyprpolkitagent"
 exec-once = nm-applet 
 exec-once = hyprpaper
 exec-once = waybar
@@ -228,7 +228,8 @@ bind = $mainMod, D, hy3:makegroup, h,
 bind = $mainMod, S, hy3:makegroup, v,
 # bind = $mainMod, T, togglegroup,
 bind = $mainMod, Z, changegroupactive,
-# bind = $mainMod, F, hy3:focustab
+bind = ALT, mouse_down, hy3:focustab,
+bind = ALT, mouse_up, hy3:focustab,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, hy3:movefocus, l
