Additional packages and code changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -63,6 +63,9 @@ env = XCURSOR_SIZE,12
 env = XCURSOR_THEME,"Saturn"
 env = HYPRCURSOR_THEME,"Saturn" 
 env = HYPRCURSOR_SIZE,12
+env = GTK_ICON_THEME,"crystal-remix"
+env = QT_ICONS_DIR,"crystal-remix" # For Qt applications
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #####################
 ### LOOK AND FEEL ###
