Just some recent edits to config files

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,16 +40,17 @@ $lock = swaylock --clock --indicator --screenshots --effect-scale 0.4 --effect-v
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = hyprcursor
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = uwsm app nm-applet
+# exec-once = uwsm app dunst 
 exec-once = uwsm app hyprpaper
 exec-once = uwsm app waybar
 # exec-once = dockx
 # exec-once = nwg-dock-hyprland -x -d -hd 0
 exec-once = uwsm app swaync
-exec-once = crystal-dock
+exec-once = uwsm app crystal-dock
 exec-once = uwsm app swayosd-server
+exec-once = uwsm app brightnessctl
 exec-once = uwsm finalize Hyprland
 # exec-once = hyprpm reload -n
 
@@ -63,7 +64,7 @@ env = XCURSOR_SIZE,12
 env = XCURSOR_THEME,"Saturn"
 env = HYPRCURSOR_THEME,"Saturn" 
 env = HYPRCURSOR_SIZE,12
-env = GTK_ICON_THEME,"crystal-remix"
+env = GTK_ICON_THEME,"Nordzy-dark"
 env = QT_ICONS_DIR,"crystal-remix" # For Qt applications
 
 #####################
@@ -197,9 +198,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
