--- a/sway/config
+++ b/sway/config
@@ -232,7 +232,7 @@ bar {
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-    swaybar_command waybar
+    status_command waybar
 
     colors {
         statusline #ffffff
