New code. Still don't know how to write a home.nix.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $lock = swaylock --clock --indicator --screenshots --effect-scale 0.4 --effect-v
 
 # exec-once = $terminal
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = uwsm app nm-applet
+# exec-once = uwsm app nm-applet
 # exec-once = uwsm app dunst 
 exec-once = uwsm app hyprpaper
 exec-once = uwsm app waybar
