Additions to packages.nix

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,9 +46,9 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = uwsm app hyprpaper
 exec-once = uwsm app waybar
 # exec-once = dockx
-# exec-once = nwg-dock-hyprland -x -d -hd 0
+exec-once = nwg-dock-hyprland -x -d -hd 0
 exec-once = uwsm app swaync
-exec-once = uwsm app crystal-dock
+# exec-once = uwsm app crystal-dock
 exec-once = uwsm app swayosd-server
 exec-once = uwsm app brightnessctl
 exec-once = uwsm finalize Hyprland
