--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,7 +48,7 @@ exec-once = uwsm app waybar
 # exec-once = dockx
 # exec-once = nwg-dock-hyprland -x -d -hd 0
 exec-once = uwsm app swaync
-exec-once = uwsm app crystal-dock
+# exec-once = uwsm app crystal-dock
 exec-once = uwsm app swayosd-server
 exec-once = uwsm app brightnessctl
 exec-once = uwsm finalize Hyprland
@@ -96,7 +96,7 @@ decoration {
     rounding = 24
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.90 
+    active_opacity = 1.00 
     inactive_opacity = 0.80
 
 #    drop_shadow = true
@@ -305,7 +305,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+# windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
