--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor=eDP-1,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
+$terminal = wezterm-gui
 $fileManager = nautilus
 $menu = wofi --show drun,run
 $lock = swaylock --clock --indicator --screenshots --effect-scale 0.4 --effect-vignette 0.2:0.5 --effect-blur 4x2 --datestr "%a %e.%m.%Y" --timestr "%k:%M"
@@ -44,7 +44,7 @@ exec-once = systemctl --user start hyprpolkitagent
 # exec-once = uwsm app nm-applet
 # exec-once = uwsm app dunst 
 exec-once = uwsm app hyprpaper
-exec-once = uwsm app waybar
+# exec-once = uwsm app waybar
 # exec-once = dockx
 # exec-once = nwg-dock-hyprland -x -d -hd 0
 exec-once = uwsm app swaync
