Add mangowc config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,6 +40,7 @@ $lock = swaylock --clock --indicator --screenshots --effect-scale 0.4 --effect-v
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
+exec_once = finalize Hyprland
 exec-once = systemctl --user start hyprpolkitagent
 # exec-once = uwsm app nm-applet
 # exec-once = uwsm app dunst 
@@ -51,7 +52,6 @@ exec-once = uwsm app swaync
 # exec-once = uwsm app crystal-dock
 exec-once = uwsm app swayosd-server
 exec-once = uwsm app brightnessctl
-exec-once = uwsm finalize Hyprland
 # exec-once = hyprpm reload -n
 
 #############################
@@ -175,6 +175,7 @@ misc {
     enable_anr_dialog = true;
 }
 
+general:layout = hy3
 
 #############
 ### INPUT ###
@@ -270,8 +271,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-# bind = $mainMod, mouse_down, workspace, e-1
-# bind = $mainMod, mouse_up, workspace, e+1
+bind = Alt, mouse_down, workspace, e-1
+bind = Alt, mouse_up, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
