--- a/mango/config.conf
+++ b/mango/config.conf
@@ -1,8 +1,9 @@
 # More option see https://github.com/DreamMaoMao/mango/wiki/
 
-exec-once=$HOME/.config/mango/autostart.sh
+exec=/home/sarcutus/sarcutusdotfiles/mango/autostart.sh
 
 cursor_theme="Saturn"
+cursor_size=12
 
 # Window effect
 blur=0
@@ -120,8 +121,8 @@ scratchpad_width_ratio=0.8
 scratchpad_height_ratio=0.9
 borderpx=4
 rootcolor=0x201b14ff
-bordercolor=0x444444ff
-focuscolor=0xc9b890ff
+bordercolor=0x800080ff
+focuscolor=0x000080ff
 maximizescreencolor=0x89aa61ff
 urgentcolor=0xad401fff
 scratchpadcolor=0x516c93ff
@@ -148,8 +149,8 @@ tagrule=id:9,layout_name:tile
 bind=SUPER,r,reload_config
 
 # menu and terminal
-bind=Alt,space,spawn,wofi --show drun
-bind=Alt,Return,spawn,wezterm-gui
+bind=Alt,space,spawn,rofi -show drun
+bind=Alt,Return,spawn,wezterm-mux-server && wezterm-gui
 
 # exit
 bind=SUPER,m,quit
